--- a/RedditStoreApp/RedditStoreApp.csproj
+++ b/RedditStoreApp/RedditStoreApp.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Data\Model\Listing.cs" />
     <Compile Include="Data\Model\Post.cs" />
     <Compile Include="Data\Model\Subreddit.cs" />
-    <Compile Include="Data\Factory\RootFactory.cs" />
+    <Compile Include="Data\Factory\RedditApi.cs" />
     <Compile Include="Data\Model\Thing.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
