--- a/RedditStoreApp/RedditStoreApp.csproj
+++ b/RedditStoreApp/RedditStoreApp.csproj
@@ -117,12 +117,14 @@
     <Compile Include="Data\Model\Subreddit.cs" />
     <Compile Include="Data\Factory\RedditApi.cs" />
     <Compile Include="Data\Model\Thing.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Helpers\INavigationService.cs" />
     <Compile Include="Helpers\NavigationService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Converter\SortValueConverter.cs" />
     <Compile Include="View\LinkListView.xaml.cs">
       <DependentUpon>LinkListView.xaml</DependentUpon>
     </Compile>
