--- a/RedditStoreApp/packages.config
+++ b/RedditStoreApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Callisto" version="1.2.5" targetFramework="winrt45" />
   <package id="MvvmLight" version="4.1.23.0" targetFramework="winrt45" />
+  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="winrt45" />
 </packages>
