--- a/RedditStoreApp/RedditStoreApp.csproj
+++ b/RedditStoreApp/RedditStoreApp.csproj
@@ -105,6 +105,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CueTextBox.cs" />
     <Compile Include="Controls\RotateButton.cs" />
     <Compile Include="Data\Core\PasswordVaultWrapper.cs" />
     <Compile Include="Data\Core\RequestService.cs" />
