--- a/RedditStoreApp/RedditStoreApp.csproj
+++ b/RedditStoreApp/RedditStoreApp.csproj
@@ -127,6 +127,9 @@
     <Compile Include="OverlayDialogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
+    <Compile Include="ViewModels\FlatCommentCollection.cs" />
+    <Compile Include="ViewModels\FlatCommentCollectionItem.cs" />
+    <Compile Include="ViewModels\MoreActionViewModel.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
     <Compile Include="ViewModels\SupportIncrementalLoadingWrapper.cs" />
     <Compile Include="Views\Converters\NullVisibilityConverter.cs" />
