--- a/RedditStoreApp/RedditStoreApp.csproj
+++ b/RedditStoreApp/RedditStoreApp.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Views\PostHeader.xaml.cs">
       <DependentUpon>PostHeader.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Selectors\CommentSelector.cs" />
     <Compile Include="Views\Selectors\PostSelector.cs" />
     <Compile Include="Views\SettingsFlyoutView.xaml.cs">
       <DependentUpon>SettingsFlyoutView.xaml</DependentUpon>
